--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,11 @@ stages:
       - task: CmdLine@2
         inputs:
           script: |
-            docker build -t git.systementor.se/yacloud/stefan1120 .
-            docker login -u $env:DOCKER_USERNAME -p $env:DOCKER_PASSWORD https://git.systementor.se
-            docker push git.systementor.se/yacloud/stefan1120
-        env:
-          DOCKER_USERNAME: $(DOCKER_USERNAME)
-          DOCKER_PASSWORD: $(DOCKER_PASSWORD)
+            docker build -t git.systementor.se/ahlin.erik/test1120azure .
+            docker login -u ahlin.erik -p yacloud1 https://git.systementor.se
+            docker push git.systementor.se/ahlin.erik/test1120azure 
+
+#           docker login -u $env:DOCKER_USERNAME -p $env:DOCKER_PASSWORD https://git.systementor.se
+#      env:
+#        DOCKER_USERNAME: $(DOCKER_USERNAME)
+#        DOCKER_PASSWORD: $(DOCKER_PASSWORD)
