--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,10 @@ stages:
         inputs:
           script: |
             docker build -t git.systementor.se/ahlin.erik/test1120azure .
-            docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD https://git.systementor.se            
+            docker login -u $USERNAME -p $PASSWORD https://git.systementor.se            
             docker push git.systementor.se/ahlin.erik/test1120azure 
         env:
-          DOCKER_USERNAME: $(DOCKER_USERNAME)
-          DOCKER_PASSWORD: $(DOCKER_PASSWORD)
+          USERNAME: $(DOCKER_USERNAME)
+          PASSWORD: $(DOCKER_PASSWORD)
 
 #           docker login -u ahlin.erik -p yacloud1 https://git.systementor.se
